--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <h1>Hello</h1>
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/c29cf8c77b.js" crossorigin="anonymous"></script>
 </body>
